--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-big-calendar": "^0.38.0",
     "react-datetime-picker": "^3.0.2",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^17.0.2",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
@@ -17,13 +18,17 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sweetalert2": "^11.1.9"
+    "sweetalert2": "^11.1.9",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && yarn pwa",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pwa": "workbox injectManifest"
   },
   "eslintConfig": {
     "extends": "react-app"
